--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,22 +10,24 @@
 			<div class="maincolumns columns is-desktop is-vcentered">
 				<div class="column is-10 is-offset-1 notification is-info is-light box container">
 					<div class="title">
-						To do list
+						Web Users
 					</div>
 					<% if (locals.allTodos) { %>
 						<div class="table-container">
 						<table class="table is-bordered is-hoverable is-striped is-narrow">
 							<thead>
 							<tr>
-								<th> # </th>
-								<th> Todo </th>
+								<th> id </th>
+								<th> name </th>
+								<th> email </th>
 							</tr>
 							</thead>
 							<% let i=0; %>
 							<% for(i=0; i < allTodos.length; i++) { %>
 							<tr>
-								<td><%= allTodos[i].todo_id %></td>
-								<td><%= allTodos[i].todo_name %></td>
+								<td><%= allTodos[i].web_user_id %></td>
+								<td><%= allTodos[i].name %></td>
+								<td><%= allTodos[i].email %></td>
 							</tr>
 							<% } %>
 							<tfoot>
